unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/csmrgp__CaseMergeSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Case Merge Object Settings</label>
</CustomObject>