unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__CopyFields1__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__CopyFields1__c</fullName>
    <label>CopyFields1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>