unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__DeleteOriginal__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__DeleteOriginal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DeleteOriginal</label>
    <type>Checkbox</type>
</CustomField>