unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>