unpackaged/main/default/objects/csmrgp__CaseMergeSettings__c/fields/csmrgp__ReParent__c.field-meta.xml
<CustomField>
    <fullName>csmrgp__ReParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReParent</label>
    <type>Checkbox</type>
</CustomField>